Update EDA notebook with execution counts and add sequence length and nucleotide distribution statistics

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,13 +146,13 @@
     "sample_submission = pd.read_csv(SAMPLE_SUB_PATH)\n",
     "\n",
     "# Fill missing values in labels with 0\n",
-    "# train_labels.fillna(0, inplace=True)\n",
-    "# valid_labels.fillna(0, inplace=True)"
+    "train_labels.fillna(0, inplace=True)\n",
+    "valid_labels.fillna(0, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -222,9 +222,9 @@
       " 0   ID       137095 non-null  object \n",
       " 1   resname  137095 non-null  object \n",
       " 2   resid    137095 non-null  int64  \n",
-      " 3   x_1      130950 non-null  float64\n",
-      " 4   y_1      130950 non-null  float64\n",
-      " 5   z_1      130950 non-null  float64\n",
+      " 3   x_1      137095 non-null  float64\n",
+      " 4   y_1      137095 non-null  float64\n",
+      " 5   z_1      137095 non-null  float64\n",
       "dtypes: float64(3), int64(1), object(2)\n",
       "memory usage: 6.3+ MB\n"
      ]
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "9  >1BIV_1|Chain A|TAR RNA|synthetic construct (3...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================\n",
+      "Sequence length statistics:\n",
+      "============================\n",
+      "\n",
+      "Min: 3\n",
+      "Max: 4298\n",
+      "Mean: 162.43483412322274\n",
+      "Median: 39.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sequence length statistics:\n",
+    "sequence_length = train_sequences.sequence.apply(lambda x: len(x))\n",
+    "\n",
+    "print(\"============================\")\n",
+    "print('Sequence length statistics:')\n",
+    "print(\"============================\\n\")\n",
+    "\n",
+    "print('Min:', sequence_length.min())\n",
+    "print('Max:', sequence_length.max())\n",
+    "print('Mean:', sequence_length.mean())\n",
+    "print('Median:', sequence_length.median())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -421,20 +455,22 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Check every sequence if it contains onlt A, C, G, U\n",
     "RNA_sequence = {\n",
     "    'A': \"Adenine\",\n",
     "    'C': \"Cytosine\",\n",
     "    'G': \"Guanine\",\n",
-    "    'U': \"Uracil\"\n",
+    "    'U': \"Uracil\",\n",
+    "    '-': \"Missing\",\n",
+    "    'X': \"Unknown\"\n",
     "}\n",
     "\n",
-    "# Check every sequence if it contains onlt A, C, G, U\n",
     "sequence_count = train_sequences['sequence'].apply(lambda x: set(x)).value_counts()\n",
     "sequence_count"
    ]
@@ -454,6 +490,40 @@
    ],
    "source": [
     "print(f\"the Majority of the sequences are composed of {', '.join(RNA_sequence.values())} with {sequence_count.values[0]} sequences.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================\n",
+      "Nucleotide distribution:\n",
+      "========================\n",
+      "\n",
+      "There are 41450 Guanine (G) nucleotides in the sequences.\n",
+      "There are 33937 Cytosine (C) nucleotides in the sequences.\n",
+      "There are 32524 Adenine (A) nucleotides in the sequences.\n",
+      "There are 29178 Uracil (U) nucleotides in the sequences.\n",
+      "There are 4 Missing (-) nucleotides in the sequences.\n",
+      "There are 2 Unknown (X) nucleotides in the sequences.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nucleotide distribution:\n",
+    "nucleotides = train_sequences['sequence'].apply(lambda x: pd.Series(list(x)))\n",
+    "nucleotides = nucleotides.stack().value_counts()\n",
+    "\n",
+    "print(\"========================\")\n",
+    "print(\"Nucleotide distribution:\")\n",
+    "print(\"========================\\n\")\n",
+    "for k, v in nucleotides.items():\n",
+    "    print(f\"There are {v} {RNA_sequence[k]} ({k}) nucleotides in the sequences.\")"
    ]
   }
  ],
